--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@ ul li::before {
   top: 9px;
 }
 
+/* Heading font */
+h1, h2, h3 { font-family:'Playfair Display', serif !important; }
+
+/* Clean link styling */
+a { color:#2f3a2f; text-decoration:none; font-weight:600; }
+a:hover { color:#6f8b6c; text-decoration:underline; }
+
 </style>
 </head>
 <body>
@@ -116,12 +123,7 @@ ul li::before {
     <div class="work-item">
       <h3><a href="https://www.sainteliaschurch.org/post/fruits-of-faith-gala-a-mediterranean-soir%C3%A9e-to-support-the-st-elias-capital-campaign" target="_blank">Fruits of Faith Gala — Capital Campaign</a></h3>
       <div class="work-meta">St. Elias Antiochian Orthodox Church</div>
-      <p>Campaign communications and digital media support for a major fundraising gala.</p>
-    </div>
-    <div class="work-item">
-      <h3><a href="https://www.instagram.com/uiw_ceo/?hl=en" target="_blank">President & Social Media Director — UIW CEO</a></h3>
-      <div class="work-meta">Collegiate Entrepreneurs’ Organization</div>
-      <p>Led chapter communications, brand strategy, and event promotion.</p>
+      <p>Campaign communications, event branding support, and digital promotion for a major fundraising gala benefiting the capital campaign.</p>
     </div>
   </div>
 </section>
@@ -198,7 +200,38 @@ ul li::before {
 
 <section id="leadership">
   <h2>Leadership & Community Involvement</h2>
-  {{LEADERSHIP_CONTENT}}
+
+  <div class="work-item">
+    <h3>Vice Chair — Media & Communications</h3>
+    <div class="work-meta">St. Elias Antiochian Orthodox Church · Austin, TX · Jan 2025 – Present</div>
+    <ul>
+      <li>Partner with committee leaders to drive long‑term communication strategy and community engagement.</li>
+      <li>Coordinate messaging across fundraising, design, finance, and leadership teams.</li>
+      <li>Support strategic planning, documentation, and high‑priority initiatives.</li>
+      <li>Build strong relationships within the parish to deepen involvement and support campaign goals.</li>
+    </ul>
+  </div>
+
+  <div class="work-item">
+    <h3>President & Social Media Director</h3>
+    <div class="work-meta">Collegiate Entrepreneurs’ Organization · UIW</div>
+    <ul>
+      <li>Directed organization marketing strategy, increasing engagement by 35% and membership by 20%.</li>
+      <li>Planned workshops, events, and partnerships with industry leaders to support student development.</li>
+      <li>Managed brand presence across social channels with cohesive voice and visual identity.</li>
+      <li>Encouraged collaboration, leadership, and entrepreneurial growth within the student community.</li>
+    </ul>
+  </div>
+
+  <div class="work-item">
+    <h3>Vice President</h3>
+    <div class="work-meta">UIW Sustainability Organization · San Antonio, TX</div>
+    <ul>
+      <li>Organized educational events and campaigns promoting sustainable practices on campus.</li>
+      <li>Presented sustainable retail and operations strategies to university leadership.</li>
+      <li>Developed initiatives that increased environmental awareness within the campus community.</li>
+    </ul>
+  </div>
 </section>
 
 <section id="education">
@@ -243,7 +276,7 @@ ul li::before {
 
     <div style="text-align:center;">
       <h3 style="color:#6f8b6c; margin-bottom:8px;">Phone</h3>
-      <p style="color:#2f3a2f; font-weight:600; font-size:16px;">979-253-3523</p>
+      <p style="color:#2f3a2f; font-weight:600; font-size:16px;">979‑253‑3523</p>
     </div>
 
     <div style="text-align:center;">
